// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test users reducer should get message about a problem with authentication 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about adding user to database 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about modifying user in database 1`] = `
Object {
  "errorMessage": undefined,
  "selectedUser": undefined,
  "singleUser": Object {
    "data": Object {
      "_id": "1111-2222-3333-4444",
      "date": "01-01-2020",
      "email": "test@mail.com",
      "name": "tester",
      "password": "Terror2137",
      "role": "TESTER",
    },
    "message": "Okuratna wiadomość z serwera!",
  },
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about removing user from database 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about single users' not finding 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about user's adding fail 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about user's modifying fail 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about user's removing fail 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about users list's not finding 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should load a single user 1`] = `
Object {
  "_id": "1111-2222-3333-4444",
  "date": "01-01-2020",
  "email": "test@mail.com",
  "errorMessage": "",
  "name": "tester",
  "password": "Terror2137",
  "role": "TESTER",
  "selectedUser": undefined,
  "usersList": Array [],
}
`;

exports[`test users reducer should load users list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "date": "01-01-2020",
    "email": "test@mail.com",
    "name": "tester",
    "password": "Terror2137",
    "role": "TESTER",
  },
  "errorMessage": "",
  "selectedUser": Object {},
  "usersList": undefined,
}
`;
